--- a/forum-single.html
+++ b/forum-single.html
@@ -138,7 +138,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="img/forum/author-avatar.png" alt="author avatar">
+                                        <img src="img/forum_support/cp9.png" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#"> Marco Rossi </a>
@@ -153,7 +153,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="img/forum/author-avatar.png" alt="author avatar">
+                                        <img src="img/forum_support/cp8.png" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#"> Letizia Nati </a>
@@ -169,7 +169,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="img/forum/author-avatar.png" alt="author avatar">
+                                        <img src="img/forum_support/cp3.jpg" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#"> Beatrice Veltri </a>
@@ -184,7 +184,7 @@
                             <div class="forum-comment">
                                 <div class="forum-post-top">
                                     <a class="author-avatar" href="#">
-                                        <img src="img/forum/author-avatar.png" alt="author avatar">
+                                        <img src="img/forum_support/cp1.png" alt="author avatar">
                                     </a>
                                     <div class="forum-post-author">
                                         <a class="author-name" href="#"> Mario Lelli </a>
