--- a/doclist.html
+++ b/doclist.html
@@ -113,7 +113,7 @@
                                 <p> - Realityhouse è un forum giovanile in cui però la musica non è l’unica protagonista e questo provoca tanta confusione e i temi trattati in primo piano sono standardizzati in base alla moda del momento.</p>
                                 <p> - Musicaclassica viene premiato per il numero e la quantità degli argomenti trattati ma rimaniamo in apparente confusione derivata da un organizzazione grafica poco efficiente e antiquata.</p>
                                 <h4 class="c_head"> Struttura e layout </h4>
-                                <p><a href="img/Schema1.png"> - Rappresentazione grafica</a></p>
+                                <p><a href="img/Schema1.PNG"> - Rappresentazione grafica</a></p>
                                 <p><a href="img/Schema2.jpeg"> - Wireframe </a></p>
                                 <p>- Utilizzo di colori strategici per trasmettere chiarezza e semplicità(bianco), professionalità (nero) e affidabilità (azzurro).<br>- Minimalismo per creare una semplicità di utilizzo.</p>
                                 <h4 class="c_head"> Linguaggi e strumenti </h4>
@@ -121,7 +121,7 @@
                                 <h4 class="c_head"> Background </h4>
                                 <p>Sulla base dell’innovazione digitale che ogni giorno viviamo abbiamo scelto uno stile minimalista ma completo di tutto il necessario, pensiamo che questo possa portare una grande innovazione nei forum ma non siamo sicuri che gli utenti finali siano pronti.</p>
                                 <h4 class="c_head"> Obbiettivi comunicativi </h4>
-                                <p> <a href="img/locandinasito.png"> - Locandina sito </a> <br> - Affermazione logo <br> - Creazione community specializzata</p>
+                                <p> <a href="img/locandinasito.PNG"> - Locandina sito </a> <br> - Affermazione logo <br> - Creazione community specializzata</p>
                                 <h4 class="c_head"> Target audience e messaggio </h4>
                                 <p> Condividere la propria passione, risolvere problemi in ambito musicale e rivoluzionare i forum questo è il nostro obbiettivo. Il target dei nostri utenti è molto ampio perché vogliamo e ci impegniamo per garantire una buona usabilità anche in fasce di età poco digitalizzate, abbiamo l’obbiettivo di creare una community in cui non solo i giovani sono i protagonisti ma anzi l’esperienza di persone più grandi è quello che ci serve, target ideale 20-40 anni. Rivoluzione? Forse, il progetto è basato sull’idea di rivoluzionare potenzialmente qualsiasi tipo di forum, vogliamo chiamarlo forum 4.0? Per noi non è importante, ci basta che le persone capiscano che non è un forum come tutti gli altri.</p>
                                 <h4 class="c_head"> Promozione </h4>
